--- a/tests/CNAB.Infra.Data.Test/CNAB.Infra.Data.Test.csproj
+++ b/tests/CNAB.Infra.Data.Test/CNAB.Infra.Data.Test.csproj
@@ -24,6 +24,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.Test.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
